style: Prevent the footer overlapping any other content
On very small window sizes the footer can overlap other content like the
'Submit comment' button. This can be prevented by moving the footer
always to the back.

--- a/assets/stylesheets/overall.scss
+++ b/assets/stylesheets/overall.scss
@@ -35,6 +35,7 @@ body {
     width: 100%;
     padding-bottom: 10px;
     background-color: #f5f5f5;
+    z-index: -1;
 }
 .darkmode {
     .footer {
